--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "react-redux": "^9.2.0",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.4"
   },
   "devDependencies": {
